--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hermes</string>
+    <string name="app_name">Ninja Protocol</string>
     <string name="default_notification_channel_id">1987</string>
     <string name="text1">Here is the area that shows your business description. I need one from you.</string>
     <string name="text2">I also need a logo of your business. It will be used to replace the logo at the top.</string>
